gcp-test/learn-istio-web-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learn-istio-web-v1
  labels:
    app: learn-istio-web
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learn-istio-web
      version: v1
  template:
    metadata:
      labels:
        app: learn-istio-web
        version: v1
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: tier
                    operator: In
                    values:
                      - backend
      containers:
        - name: learn-istio-web
          image: runsix1994/learn-istio-web:0.0.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: learn-istio-web
spec:
  ports:
    - name: http-learn-istio-web
      port: 80
      targetPort: 8080
  selector:
    app: learn-istio-web
